SERVER-75205 Fix deadlock involving FCV lock

With minor jstest amendments.

(cherry picked from commit e74f9c2fdf73ad707419fa4a8ae57aec70423ca6)